--- a/style.css
+++ b/style.css
@@ -1,28 +1,28 @@
 @charset "UTF-8";
 @font-face {
   font-family: "Gotham Rounded";
-  src: url("../fonts/GothamRounded-Bold.woff2") format("woff2");
+  src: url("./fonts/GothamRounded-Bold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Gotham Rounded";
-  src: url("../fonts/GothamRounded-Book.woff2") format("woff2");
+  src: url("./fonts/GothamRounded-Book.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Gotham Rounded";
-  src: url("../fonts/GothamRounded-Light.woff2") format("woff2");
+  src: url("./fonts/GothamRounded-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Gotham Rounded";
-  src: url("../fonts/GothamRounded-Medium.woff2") format("woff2");
+  src: url("./fonts/GothamRounded-Medium.woff2") format("woff2");
   font-weight: medium;
   font-style: normal;
   font-display: swap;
