--- a/style.css
+++ b/style.css
@@ -181,6 +181,11 @@ a {
 .wrapper {
   max-width: 1280px;
 }
+@media screen and (max-width: 375px) {
+  .wrapper {
+    padding: 0 20px;
+  }
+}
 
 .arrow-up {
   position: relative;
@@ -210,6 +215,7 @@ body {
 }
 
 .gift-bag-button {
+  z-index: 999;
   position: fixed;
   bottom: 4%;
   left: 8%;
@@ -218,6 +224,10 @@ body {
   background: #6cace4;
   border-radius: 50%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+header {
+  width: 100%;
 }
 
 .header-logo {
@@ -247,12 +257,17 @@ body {
   width: 100%;
   z-index: 999;
   background: #6cace4;
-  padding: 12px 30px;
+  padding: 12px 60px;
   color: #fff;
   font-weight: 300;
   font-size: 1.8rem;
 }
 @media screen and (max-width: 768.7px) {
+  .header__content-bottom {
+    padding: 10px 40px;
+  }
+}
+@media screen and (max-width: 550px) {
   .header__content-bottom {
     padding: 10px 20px;
   }
@@ -473,113 +488,75 @@ body {
   align-items: center;
 }
 
-.product-section {
-  padding: 65px 20px;
-}
-@media screen and (max-width: 450px) {
-  .product-section {
-    padding: 25px 5px;
-  }
-}
-
-.main-image-slider {
-  padding-bottom: 40px;
-}
-
-.main-slider-border {
-  max-width: 430px;
-  margin: 0 auto;
-}
-@media screen and (max-width: 768.7px) {
-  .main-slider-border {
-    max-width: 296px;
-  }
-}
-@media screen and (max-width: 700px) {
-  .main-slider-border {
-    max-width: 350px;
-  }
-}
-
-.main-image {
-  overflow: hidden;
-  max-width: 430px;
-  height: 100%;
-}
-@media screen and (max-width: 768.7px) {
-  .main-image {
-    max-width: 296px;
-  }
-}
-@media screen and (max-width: 700px) {
-  .main-image {
-    max-width: 350px;
-  }
-}
-@media screen and (max-width: 414.7px) {
-  .main-image {
-    width: 100%;
-  }
-}
-
-.smoll-image-slider {
-  max-width: 430px;
-  margin: 0 auto;
-}
-
-.smoll-slider-border {
-  overflow: hidden;
+.swiper__container {
   width: 100%;
+  overflow: hidden;
 }
 
-.smoll-slider {
+.image-slider__image {
+  text-align: center;
+}
+
+.image {
+  max-width: 100%;
+}
+
+.image-mini-slider {
+  margin-top: 50px;
+}
+
+.image-mini-slider__wrapper {
   display: flex;
-  justify-content: space-between;
-  row-gap: 15px;
-  width: 100%;
+  column-gap: 1%;
 }
 
-.smoll-slider-item {
-  width: 55px;
-  height: 100%;
-}
-.smoll-slider-item:first-child {
-  border: 2px solid #6c757d;
+.image-mini-slider__slide {
+  width: 15%;
+  opacity: 0.4;
+  transition: opacity 0.3s ease 0s;
 }
 
-.smoll-image {
+.image-mini-slider__slide.swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.image-mini-slider__image {
+  position: relative;
+  padding: 0 0 101% 0;
+  cursor: pointer;
+}
+
+.image-mini {
   object-fit: cover;
+  position: absolute;
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;
 }
 
 .product__layout {
   margin: 0 auto;
   max-width: 1280px;
-  display: flex;
-  flex-wrap: wrap;
+  width: calc(50% - 30px);
+  display: inline-block;
+  text-align: center;
 }
 @media screen and (max-width: 700px) {
   .product__layout {
-    flex-direction: column;
+    display: block;
+    width: 80%;
+    margin: auto;
   }
 }
-
-.product__layout-item {
-  width: 50%;
-  padding: 0 30px;
-}
-@media screen and (max-width: 700px) {
-  .product__layout-item {
+@media screen and (max-width: 500px) {
+  .product__layout {
     width: 100%;
-    padding: 0;
-  }
-}
-@media screen and (max-width: 450px) {
-  .product__layout-item {
-    padding: 0 20px;
   }
 }
 
 .product__title {
+  text-align: left;
   font-size: 3.5rem;
   font-weight: normal;
   color: #495057;
@@ -595,6 +572,7 @@ body {
 .revies__container {
   display: flex;
   flex-wrap: wrap;
+  text-align: left;
 }
 
 .star {
@@ -638,14 +616,15 @@ body {
   font-weight: 300;
   border-bottom: 1px solid #ced4da;
   padding: 15px 0;
+  text-align: left;
 }
 
 .additional-options__container {
   padding: 15px 0;
   display: flex;
-  flex-wrap: wrap;
+  align-items: flex-start;
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768.7px) {
   .additional-options__container {
     display: flex;
     flex-direction: column;
@@ -659,6 +638,7 @@ body {
   font-size: 1.2rem;
   font-weight: medium;
   letter-spacing: 0.3rem;
+  margin: 0 auto 0 0;
 }
 @media screen and (max-width: 500) {
   .options__title {
@@ -671,13 +651,14 @@ body {
   column-gap: 15px;
   margin-bottom: 10px;
   row-gap: 15px;
+  align-items: flex-start;
 }
 @media screen and (max-width: 500px) {
   .options-buttons__container {
     row-gap: none;
   }
 }
-@media screen and (max-width: 320.7px) {
+@media screen and (max-width: 768.7px) {
   .options-buttons__container {
     flex-direction: column;
   }
@@ -700,7 +681,7 @@ body {
 }
 @media screen and (max-width: 768.7px) {
   .accordion__title {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
   }
 }
 .accordion__title:after {
@@ -710,7 +691,7 @@ body {
   height: 2px;
   background: #6c757d;
   top: calc(50% - 1px);
-  right: 220px;
+  right: 20%;
 }
 
 .product__description__container {
@@ -734,10 +715,36 @@ table {
   margin-bottom: 30px;
 }
 
-@media screen and (max-width: 450px) {
+.product-form {
+  margin-left: 5%;
+}
+@media screen and (max-width: 700px) {
   .product-form {
-    padding: 0 10px;
+    margin: 5% auto 0;
   }
+}
+
+.img__content {
+  vertical-align: top;
+  margin-top: 0;
+}
+
+.product-section {
+  padding: 65px 20px;
+}
+@media screen and (max-width: 450px) {
+  .product-section {
+    padding: 25px 20px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .product-section {
+    padding: 25px 0;
+  }
+}
+
+.accordion-item__content {
+  transition: all 3s;
 }
 
 .quantity_icon {
@@ -795,6 +802,11 @@ table {
 .add-to-card-button {
   width: calc(100% - 120px - 10px);
 }
+@media screen and (max-width: 414.7px) {
+  .add-to-card-button {
+    padding: 11.5px;
+  }
+}
 
 .quantity-basket {
   display: flex;
@@ -823,11 +835,24 @@ table {
   justify-content: space-between;
   padding: 15px 0;
 }
+@media screen and (max-width: 600px) {
+  .review-top__content {
+    flex-direction: column;
+    align-self: start;
+    row-gap: 20px;
+    padding: 0;
+  }
+}
 
 .review__title {
   font-weight: normal;
   border-bottom: 2px solid #6cace4;
   color: #6cace4;
+}
+@media screen and (max-width: 600px) {
+  .review__title {
+    display: inline-block;
+  }
 }
 
 .sort__button {
@@ -839,6 +864,11 @@ table {
 
 .sort__button__container {
   position: relative;
+}
+@media screen and (max-width: 600px) {
+  .sort__button__container {
+    display: inline-block;
+  }
 }
 
 .Select {
@@ -860,7 +890,7 @@ table {
 .list-category {
   font-weight: 300;
   font-size: 1.2rem;
-  padding: 8px 40px;
+  padding: 8px 25px 8px 40px;
   border: 1px solid rgba(42, 42, 42, 0.1);
   background-color: #fff;
 }
@@ -872,6 +902,11 @@ table {
 .user-review__container:last-child {
   flex-direction: column;
   padding: 5px 0 5px 60px;
+}
+@media screen and (max-width: 768.7px) {
+  .user-review__container:last-child {
+    padding: 5px 0 5px 10px;
+  }
 }
 
 .long-review {
@@ -887,6 +922,11 @@ table {
 .review__main__container {
   padding-left: 30px;
   padding: 20px 0 20px 40px;
+}
+@media screen and (max-width: 768.7px) {
+  .review__main__container {
+    padding: 20px 0 20px 10px;
+  }
 }
 
 .user-letter {
@@ -915,6 +955,16 @@ table {
   font-size: 1.2rem;
   font-weight: normal;
   color: #6cace4;
+  position: relative;
+}
+.user-name:after {
+  position: absolute;
+  content: "Verified Buyer";
+  font-size: 1.2rem;
+  width: 100%;
+  font-weight: 300;
+  color: #6c757d;
+  left: 85%;
 }
 
 .user-block {
@@ -930,6 +980,11 @@ table {
   padding-left: 20px;
   padding-top: 20px;
   border-left: 2px solid #6cace4;
+}
+@media screen and (max-width: 768.7px) {
+  .answer__container {
+    margin-left: 20px;
+  }
 }
 
 .answer-icon {
@@ -980,6 +1035,52 @@ table {
   column-gap: 10px;
 }
 
+@media screen and (max-width: 600px) {
+  .review-date {
+    display: none !important;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .answer-date {
+    display: none !important;
+  }
+}
+
+.arrow-left {
+  position: relative;
+  font-size: 2rem;
+}
+.arrow-left::before {
+  position: absolute;
+  width: 5%;
+  height: 100%;
+  top: 0;
+  left: -50px;
+  content: "<";
+}
+
+.arrow-right {
+  position: relative;
+  font-size: 2rem;
+}
+.arrow-right::before {
+  top: 0;
+  right: -50px;
+  position: absolute;
+  content: ">";
+}
+
+.pagination__button {
+  margin: 0 5px;
+}
+
+.pagination__container {
+  display: flex;
+  justify-content: center;
+  color: #6cace4;
+}
+
 .purchase-options-buttons__container {
   display: flex;
   flex-direction: column;
@@ -995,6 +1096,7 @@ table {
   background: rgb(242, 242, 242);
   cursor: pointer;
   color: #6c757d;
+  transition: all 0.5s ease 0;
 }
 .purchase-button-group::before {
   position: absolute;
